# crypto-market-alert

./: .gitignore  ADVANCED.md  COMO_INTERPRETAR_ALERTAS.md  COMPREHENSIVE_TEST_ANALYSIS.md  CONTRIBUTING.md  DASHBOARD_GUIDE.md  GIT_WORKFLOW_RECOMMENDATION.md  LICENSE  PROJECT_SUMMARY.md  README.md  debug_alert_sending.py  debug_market_data.py  debug_portfolio_calculation.py  debug_production_flow.py  demo_alerts.py  demo_complete_system.py  demo_strategic_advisor.py  deploy.sh  main.py  price_tracker.py  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.sh  task.md  telegram_bot.py  test_analysis_reproduction.py  test_api_priority.py  test_binance_404.py  test_coingecko_format.py  test_hybrid_fetcher.py  test_new_format.py  test_setup.py  test_strategic_advisor.py  test_strategic_message.py  test_telegram_format.py
config/: config.yaml  example.env  quick_start.yaml
docs/: ADVANCED.md  BOT_CHEATSHEET.txt  BOT_QUICK_REFERENCE.md  CHANGELOG.md  COMO_INTERPRETAR_ALERTAS.md  DOC_INDEX.md  GUIA_CONTEXTOS.md  PRICE_TRACKING_SYSTEM.md  PROJECT_SUMMARY.md  TELEGRAM_BOT.md  TELEGRAM_BOT_QUICKSTART.md
examples/: demo_enhanced_features.py
scripts/: crypto-alert.service  crypto-bot.service  crypto-price-tracker.service  install_bot_service.sh  install_service.sh  setup_bot.sh
src/: __init__.py  alerts.py  api_client.py  cycle_top_analyzer.py  cycle_top_detector.py  data_fetcher.py  hybrid_data_fetcher.py  indicators.py  portfolio_utils.py  price_history.py  professional_analyzer.py  strategic_advisor.py  strategy.py  utils.py
tests/: conftest.py  test_alerts.py  test_alerts_edge_cases.py  test_api_contracts.py  test_cycle_top_detector.py  test_cycle_top_detector_coverage.py  test_data_fetcher.py  test_data_fetcher_edge_cases.py  test_indicators.py  test_market_scenarios.py  test_new_indicators.py  test_partial_exit_strategy.py  test_professional_analyzer.py  test_strategic_advisor.py  test_strategic_advisor_coverage.py  test_strategy.py  test_utils.py
